# astar_contract

./: README.md  package.json  swanky.config.json
contracts/: Cargo.toml
contracts/psp22/: Cargo.toml  lib.rs
contracts/psp34/: Cargo.toml  lib.rs
