[package]
name = "my_psp34_mintable"
version = "1.0.0"
authors = ["AstarShowCase <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { tag = "3.1.0", git = "https://github.com/727-Ventures/openbrush-contracts", default-features = false, features = ["ownable","psp34", "psp22"] }

my_psp22_mintable = {version = "3.0.0", path = "../psp22", default-features = false, features = ["ink-as-dependency"]} # add

[dev-dependencies]
ink_e2e = { version = "4.2.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []

